--- a/package.json
+++ b/package.json
@@ -16,5 +16,9 @@
   "bugs": {
     "url": "https://github.com/MariusCodeAcademy/js3_Webpack/issues"
   },
-  "homepage": "https://github.com/MariusCodeAcademy/js3_Webpack#readme"
+  "homepage": "https://github.com/MariusCodeAcademy/js3_Webpack#readme",
+  "devDependencies": {
+    "webpack": "^5.37.1",
+    "webpack-cli": "^4.7.0"
+  }
 }
