--- a/package.json
+++ b/package.json
@@ -5,9 +5,9 @@
   "main": "index.js",
   "scripts": {
     "start": "npm install",
-    "dev": "webpack",
+    "dev": "webpack --config webpack.dev.js",
     "serve": "webpack serve --open",
-    "build": "webpack --mode production"
+    "build": "webpack --config webpack.prod.js"
   },
   "keywords": [],
   "author": "M.K.",
